get pipeline to class

--- a/notebooks/excercise.ipynb
+++ b/notebooks/excercise.ipynb
@@ -113,17 +113,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "fd8eb06a-d010-49f0-afd8-52447ef05d56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LidarProcessor:\n",
+    "class UsgsLidar:\n",
     "    \n",
-    "    def __init__(self, public_data_url: str = \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/IA_FullState/ept.json\", pipeline_json_path: str=\"pipeline.json\") -> None:\n",
+    "    def __init__(self, path: str = \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/IA_FullState/ept.json\", pipeline_json_path: str=\"pipeline.json\") -> None:\n",
     "            \n",
     "        self.pipeline_json = read_json(pipeline_json_path)\n",
-    "        self.public_data_url = public_data_url\n",
+    "        self.path = path\n",
     "        self.input_epsg = 3857\n",
     "    \n",
     "        \n",
@@ -150,6 +150,14 @@
     "\n",
     "        except FileNotFoundError:\n",
     "            print('File not found.')\n",
+    "            \n",
+    "    def get_pipeline(region: str, polygon: Polygon):\n",
+    "        path = f\"{url}{region}/ept.json\"\n",
+    "\n",
+    "        a['pipeline'][1]['polygon'] = poly\n",
+    "        pipeline = pdal.Pipeline(json.dumps(a))\n",
+    "\n",
+    "        return pipeline\n",
     "            \n"
    ]
   },
@@ -168,57 +176,31 @@
     }
    ],
    "source": [
-    "df = LidarProcessor.read_csv(\"../data/iowa.csv\")\n",
-    "shape, poly = LidarProcessor.get_polygon_boundaries(polygon)\n",
+    "df = UsgsLidar.read_csv(\"../data/iowa.csv\")\n",
+    "shape, poly = UsgsLidar.get_polygon_boundaries(polygon)\n",
     "print(poly)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "201f955b-cd45-4b11-99ed-fc9a0dbf9220",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url=\"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "eb774466-fcab-44e1-aa8e-436b722a8612",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_pipeline(region: str, polygon: Polygon):\n",
-    "    path = f\"{url}{region}/ept.json\"\n",
-    "\n",
-    "    a['pipeline'][1]['polygon'] = poly\n",
-    "    pipeline = pdal.Pipeline(json.dumps(a))\n",
-    "\n",
-    "    return pipeline\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "id": "edde170a-929d-4ff1-ba8d-e9143e0dfc82",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pdal.pipeline.Pipeline at 0x7fdd2223a890>"
+       "<pdal.pipeline.Pipeline at 0x7fdd24a6f150>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "region = \"IA_FullState\"\n",
-    "pipeline = get_pipeline(region, polygon)\n",
+    "pipeline = UsgsLidar.get_pipeline(region, polygon)\n",
     "pipeline"
    ]
   },
