--- a/notebooks/excercise.ipynb
+++ b/notebooks/excercise.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "fd8eb06a-d010-49f0-afd8-52447ef05d56",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
     "        self.input_epsg = 3857\n",
     "    \n",
     "        \n",
-    "    def get_polygon_boundaries(polygon: Polygon):\n",
+    "    def fetch_polygon_boundaries(polygon: Polygon):\n",
     "        polygon_df = gpd.GeoDataFrame([polygon], columns=['geometry'])\n",
     "\n",
     "        polygon_df.set_crs(epsg=4326, inplace=True)\n",
@@ -151,7 +151,7 @@
     "        except FileNotFoundError:\n",
     "            print('File not found.')\n",
     "            \n",
-    "    def get_pipeline(region: str, polygon: Polygon):\n",
+    "    def fetch_pipeline(region: str, polygon: Polygon):\n",
     "        path = f\"{url}{region}/ept.json\"\n",
     "\n",
     "        a['pipeline'][1]['polygon'] = poly\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "715e21b4-e769-41c4-8908-5f33b5136733",
    "metadata": {},
    "outputs": [
@@ -177,30 +177,30 @@
    ],
    "source": [
     "df = UsgsLidar.read_csv(\"../data/iowa.csv\")\n",
-    "shape, poly = UsgsLidar.get_polygon_boundaries(polygon)\n",
+    "shape, poly = UsgsLidar.fetch_polygon_boundaries(polygon)\n",
     "print(poly)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "edde170a-929d-4ff1-ba8d-e9143e0dfc82",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pdal.pipeline.Pipeline at 0x7fdd24a6f150>"
+       "<pdal.pipeline.Pipeline at 0x7fdd25d5c3b0>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "region = \"IA_FullState\"\n",
-    "pipeline = UsgsLidar.get_pipeline(region, polygon)\n",
+    "pipeline = UsgsLidar.fetch_pipeline(region, polygon)\n",
     "pipeline"
    ]
   },
