give it more of a polygon look

--- a/notebooks/excercise.ipynb
+++ b/notebooks/excercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "07987b71-d485-4772-9d17-9faf328c01ce",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,8 @@
     {
      "data": {
       "text/plain": [
-       "{'pipeline': [{'bounds': '([-10425171.940, -10425161.940], [5164494.710, 5164500.710])',\n",
+       "{'pipeline': [{'polygon': '',\n",
+       "   'bounds': '([-10425171.940, -10425161.940], [5164494.710, 5164500.710])',\n",
        "   'filename': 'https://s3-us-west-2.amazonaws.com/usgs-lidar-public/IA_FullState/ept.json',\n",
        "   'type': 'readers.ept',\n",
        "   'tag': 'readdata'},\n",
@@ -80,29 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0c16ebd7-95ba-40ae-97bb-c41d0ffec4e7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "21"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pipe=pdal.Pipeline(json.dumps(a))\n",
-    "pipe.execute()"
+    "pipe=pdal.Pipeline(json.dumps(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7a8d2270-2c57-4b23-a0eb-b4e656716c95",
    "metadata": {},
    "outputs": [],
@@ -113,21 +102,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "id": "fd8eb06a-d010-49f0-afd8-52447ef05d56",
    "metadata": {},
    "outputs": [],
    "source": [
     "class UsgsLidar:\n",
     "    \n",
-    "    def __init__(self, path: str = \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/IA_FullState/ept.json\", pipeline_json_path: str=\"pipeline.json\") -> None:\n",
+    "    def __init__(self, path = \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/IA_FullState/ept.json\", pipeline_json_path: str=\"pipeline.json\") -> None:\n",
     "            \n",
-    "        self.pipeline_json = read_json(pipeline_json_path)\n",
+    "    \n",
     "        self.path = path\n",
     "        self.input_epsg = 3857\n",
     "    \n",
     "        \n",
-    "    def fetch_polygon_boundaries(polygon: Polygon):\n",
+    "    def fetch_polygon_boundaries(self, polygon: Polygon):\n",
     "        polygon_df = gpd.GeoDataFrame([polygon], columns=['geometry'])\n",
     "\n",
     "        polygon_df.set_crs(epsg=4326, inplace=True)\n",
@@ -143,7 +132,7 @@
     "\n",
     "        return f\"({[minx, maxx]},{[miny,maxy]})\", polygon_input\n",
     "    \n",
-    "    def read_csv(csv_path, missing_values=[\"n/a\", \"na\", \"undefined\"]):\n",
+    "    def read_csv(self, csv_path, missing_values=[\"n/a\", \"na\", \"undefined\"]):\n",
     "        try:\n",
     "            df = pd.read_csv(csv_path, na_values=missing_values)\n",
     "            return df\n",
@@ -151,10 +140,10 @@
     "        except FileNotFoundError:\n",
     "            print('File not found.')\n",
     "            \n",
-    "    def fetch_pipeline(region: str, polygon: Polygon):\n",
-    "        path = f\"{url}{region}/ept.json\"\n",
+    "    def fetch_pipeline (self, region: str, polygon: Polygon):\n",
+    "        url = f\"{self.path}{region}/ept.json\"\n",
     "\n",
-    "        a['pipeline'][1]['polygon'] = poly\n",
+    "        a['pipeline'][0]['polygon'] = poly\n",
     "        pipeline = pdal.Pipeline(json.dumps(a))\n",
     "\n",
     "        return pipeline\n",
@@ -163,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "id": "715e21b4-e769-41c4-8908-5f33b5136733",
    "metadata": {},
    "outputs": [
@@ -176,38 +165,48 @@
     }
    ],
    "source": [
-    "df = UsgsLidar.read_csv(\"../data/iowa.csv\")\n",
+    "US = UsgsLidar()\n",
+    "df = US.read_csv(\"../data/iowa.csv\")\n",
     "shape, poly = UsgsLidar.fetch_polygon_boundaries(polygon)\n",
     "print(poly)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "id": "edde170a-929d-4ff1-ba8d-e9143e0dfc82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "region = \"IA_FullState\"\n",
+    "pipeline = US.fetch_pipeline(region, polygon)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "29573de1-7bba-46b0-a8c3-92908222cc38",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pdal.pipeline.Pipeline at 0x7fdd25d5c3b0>"
+       "0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "region = \"IA_FullState\"\n",
-    "pipeline = UsgsLidar.fetch_pipeline(region, polygon)\n",
-    "pipeline"
+    "pipeline.execute()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29573de1-7bba-46b0-a8c3-92908222cc38",
+   "id": "49bca5ad-c36c-4328-92db-94fccb1804f4",
    "metadata": {},
    "outputs": [],
    "source": []
