fix some issues on pipeline

--- a/notebooks/excercise.ipynb
+++ b/notebooks/excercise.ipynb
@@ -54,8 +54,8 @@
      "data": {
       "text/plain": [
        "{'pipeline': [{'polygon': '',\n",
-       "   'bounds': '([-10425171.940, -10425161.940], [5164494.710, 5164500.710])',\n",
-       "   'filename': 'https://s3-us-west-2.amazonaws.com/usgs-lidar-public/IA_FullState/ept.json',\n",
+       "   'bounds': '',\n",
+       "   'filename': '',\n",
        "   'type': 'readers.ept',\n",
        "   'tag': 'readdata'},\n",
        "  {'limits': 'Classification![7:7]',\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "0c16ebd7-95ba-40ae-97bb-c41d0ffec4e7",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7a8d2270-2c57-4b23-a0eb-b4e656716c95",
    "metadata": {},
    "outputs": [],
@@ -102,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "id": "fd8eb06a-d010-49f0-afd8-52447ef05d56",
    "metadata": {},
    "outputs": [],
    "source": [
     "class UsgsLidar:\n",
     "    \n",
-    "    def __init__(self, path = \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/IA_FullState/ept.json\", pipeline_json_path: str=\"pipeline.json\") -> None:\n",
+    "    def __init__(self, path = \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/\", pipeline_json_path: str=\"pipeline.json\") -> None:\n",
     "            \n",
     "    \n",
     "        self.path = path\n",
@@ -142,8 +142,11 @@
     "            \n",
     "    def fetch_pipeline (self, region: str, polygon: Polygon):\n",
     "        url = f\"{self.path}{region}/ept.json\"\n",
-    "\n",
+    "        boundary, poly = self.fetch_polygon_boundaries(polygon)\n",
+    "        \n",
+    "        a['pipeline'][0]['filename']= f\"{self.path}{region}/ept.json\"\n",
     "        a['pipeline'][0]['polygon'] = poly\n",
+    "        a['pipeline'][0]['bounds'] = boundary\n",
     "        pipeline = pdal.Pipeline(json.dumps(a))\n",
     "\n",
     "        return pipeline\n",
@@ -152,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "id": "715e21b4-e769-41c4-8908-5f33b5136733",
    "metadata": {},
    "outputs": [
@@ -167,13 +170,13 @@
    "source": [
     "US = UsgsLidar()\n",
     "df = US.read_csv(\"../data/iowa.csv\")\n",
-    "shape, poly = UsgsLidar.fetch_polygon_boundaries(polygon)\n",
+    "shape, poly = US.fetch_polygon_boundaries(polygon)\n",
     "print(poly)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "id": "edde170a-929d-4ff1-ba8d-e9143e0dfc82",
    "metadata": {},
    "outputs": [],
@@ -184,21 +187,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "29573de1-7bba-46b0-a8c3-92908222cc38",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pipeline.execute()"
    ]
