create geopandas dataframe

--- a/notebooks/excercise.ipynb
+++ b/notebooks/excercise.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "id": "fd8eb06a-d010-49f0-afd8-52447ef05d56",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
     "        a['pipeline'][0]['polygon'] = poly\n",
     "        a['pipeline'][0]['bounds'] = boundary\n",
     "        pipeline = pdal.Pipeline(json.dumps(a))\n",
-    "\n",
+    "        \n",
     "        return pipeline\n",
     "            \n"
    ]
@@ -176,40 +176,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "id": "edde170a-929d-4ff1-ba8d-e9143e0dfc82",
    "metadata": {},
    "outputs": [],
    "source": [
     "region = \"IA_FullState\"\n",
-    "pipeline = US.fetch_pipeline(region, polygon)\n"
+    "pipeline = US.fetch_pipeline(region, polygon)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "id": "29573de1-7bba-46b0-a8c3-92908222cc38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe2 = pipeline.execute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "49bca5ad-c36c-4328-92db-94fccb1804f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_geo_df(pipe, epsg):\n",
+    "    try:\n",
+    "        cloud_points = []\n",
+    "        elevations =[]\n",
+    "        geometry_points=[]\n",
+    "        for row in pipe.arrays[0]:\n",
+    "            lst = row.tolist()[-3:]\n",
+    "            cloud_points.append(lst)\n",
+    "            elevations.append(lst[2])\n",
+    "            point = Point(lst[0], lst[1])\n",
+    "            geometry_points.append(point)\n",
+    "        geodf = gpd.GeoDataFrame(columns=[\"elevation\", \"geometry\"])\n",
+    "        geodf['elevation'] = elevations\n",
+    "        geodf['geometry'] = geometry_points\n",
+    "        geodf = geodf.set_geometry(\"geometry\")\n",
+    "        geodf.set_crs(epsg = epsg, inplace=True)\n",
+    "        return geodf\n",
+    "    except RuntimeError as e:\n",
+    "        print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "181434f6-4a9d-4d0d-9ad8-4f3684693754",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>elevation</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>314.54</td>\n",
+       "      <td>POINT (-93.75906 41.92816)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>314.55</td>\n",
+       "      <td>POINT (-93.75906 41.92817)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>314.69</td>\n",
+       "      <td>POINT (-93.75909 41.92816)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>314.70</td>\n",
+       "      <td>POINT (-93.75910 41.92816)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>314.97</td>\n",
+       "      <td>POINT (-93.75911 41.92816)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>913969</th>\n",
+       "      <td>311.15</td>\n",
+       "      <td>POINT (-93.76328 41.93497)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>913970</th>\n",
+       "      <td>307.90</td>\n",
+       "      <td>POINT (-93.76490 41.93499)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>913971</th>\n",
+       "      <td>327.76</td>\n",
+       "      <td>POINT (-93.76568 41.93491)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>913972</th>\n",
+       "      <td>315.14</td>\n",
+       "      <td>POINT (-93.76131 41.92578)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>913973</th>\n",
+       "      <td>318.21</td>\n",
+       "      <td>POINT (-93.76133 41.93051)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>913974 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "913974"
+       "        elevation                    geometry\n",
+       "0          314.54  POINT (-93.75906 41.92816)\n",
+       "1          314.55  POINT (-93.75906 41.92817)\n",
+       "2          314.69  POINT (-93.75909 41.92816)\n",
+       "3          314.70  POINT (-93.75910 41.92816)\n",
+       "4          314.97  POINT (-93.75911 41.92816)\n",
+       "...           ...                         ...\n",
+       "913969     311.15  POINT (-93.76328 41.93497)\n",
+       "913970     307.90  POINT (-93.76490 41.93499)\n",
+       "913971     327.76  POINT (-93.76568 41.93491)\n",
+       "913972     315.14  POINT (-93.76131 41.92578)\n",
+       "913973     318.21  POINT (-93.76133 41.93051)\n",
+       "\n",
+       "[913974 rows x 2 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pipeline.execute()"
+    "create_geo_df(pipeline, 4326)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49bca5ad-c36c-4328-92db-94fccb1804f4",
+   "id": "003e23d1-2816-4a3c-b260-5f8e5a7a682f",
    "metadata": {},
    "outputs": [],
    "source": []
