--- a/notebooks/excercise.ipynb
+++ b/notebooks/excercise.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "907653a0-f573-42f2-a002-9eb3e94ba46f",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4ee57602-fac2-46c6-973c-1bdfa2777ce6",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
        "   'type': 'writers.text'}]}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0c16ebd7-95ba-40ae-97bb-c41d0ffec4e7",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7a8d2270-2c57-4b23-a0eb-b4e656716c95",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "fd8eb06a-d010-49f0-afd8-52447ef05d56",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "715e21b4-e769-41c4-8908-5f33b5136733",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "edde170a-929d-4ff1-ba8d-e9143e0dfc82",
    "metadata": {},
    "outputs": [],
@@ -187,45 +187,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "id": "29573de1-7bba-46b0-a8c3-92908222cc38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "913974"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pipe2 = pipeline.execute()"
+    "pipeline.execute()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "id": "49bca5ad-c36c-4328-92db-94fccb1804f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_geo_df(pipe, epsg):\n",
+    "def create_gpd_df(pipe, epsg):\n",
     "    try:\n",
-    "        cloud_points = []\n",
+    "        cloud = []\n",
     "        elevations =[]\n",
-    "        geometry_points=[]\n",
+    "        geometry=[]\n",
     "        for row in pipe.arrays[0]:\n",
     "            lst = row.tolist()[-3:]\n",
-    "            cloud_points.append(lst)\n",
+    "            cloud.append(lst)\n",
     "            elevations.append(lst[2])\n",
     "            point = Point(lst[0], lst[1])\n",
-    "            geometry_points.append(point)\n",
-    "        geodf = gpd.GeoDataFrame(columns=[\"elevation\", \"geometry\"])\n",
-    "        geodf['elevation'] = elevations\n",
-    "        geodf['geometry'] = geometry_points\n",
-    "        geodf = geodf.set_geometry(\"geometry\")\n",
-    "        geodf.set_crs(epsg = epsg, inplace=True)\n",
-    "        return geodf\n",
+    "            geometry.append(point)\n",
+    "        gpd_df = gpd.GeoDataFrame(columns=[\"elevation\", \"geometry\"])\n",
+    "        gpd_df['elevation'] = elevations\n",
+    "        gpd_df['geometry'] = geometry\n",
+    "        gpd_df = gpd_df.set_geometry(\"geometry\")\n",
+    "        gpd_df.set_crs(epsg = epsg, inplace=True)\n",
+    "        return gpd_df\n",
     "    except RuntimeError as e:\n",
     "        print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "id": "181434f6-4a9d-4d0d-9ad8-4f3684693754",
    "metadata": {},
    "outputs": [
@@ -257,28 +268,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>314.54</td>\n",
-       "      <td>POINT (-93.75906 41.92816)</td>\n",
+       "      <td>307.78</td>\n",
+       "      <td>POINT (-93.75913 41.93289)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>314.55</td>\n",
-       "      <td>POINT (-93.75906 41.92817)</td>\n",
+       "      <td>307.79</td>\n",
+       "      <td>POINT (-93.75912 41.93289)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>314.69</td>\n",
-       "      <td>POINT (-93.75909 41.92816)</td>\n",
+       "      <td>307.69</td>\n",
+       "      <td>POINT (-93.75911 41.93289)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>314.70</td>\n",
-       "      <td>POINT (-93.75910 41.92816)</td>\n",
+       "      <td>307.64</td>\n",
+       "      <td>POINT (-93.75908 41.93289)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>314.97</td>\n",
-       "      <td>POINT (-93.75911 41.92816)</td>\n",
+       "      <td>307.66</td>\n",
+       "      <td>POINT (-93.75906 41.93289)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -287,28 +298,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>913969</th>\n",
-       "      <td>311.15</td>\n",
-       "      <td>POINT (-93.76328 41.93497)</td>\n",
+       "      <td>309.80</td>\n",
+       "      <td>POINT (-93.76211 41.93347)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>913970</th>\n",
-       "      <td>307.90</td>\n",
-       "      <td>POINT (-93.76490 41.93499)</td>\n",
+       "      <td>317.36</td>\n",
+       "      <td>POINT (-93.76370 41.93348)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>913971</th>\n",
-       "      <td>327.76</td>\n",
-       "      <td>POINT (-93.76568 41.93491)</td>\n",
+       "      <td>308.19</td>\n",
+       "      <td>POINT (-93.76052 41.93466)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>913972</th>\n",
-       "      <td>315.14</td>\n",
-       "      <td>POINT (-93.76131 41.92578)</td>\n",
+       "      <td>309.04</td>\n",
+       "      <td>POINT (-93.76211 41.93465)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>913973</th>\n",
-       "      <td>318.21</td>\n",
-       "      <td>POINT (-93.76133 41.93051)</td>\n",
+       "      <td>314.48</td>\n",
+       "      <td>POINT (-93.76371 41.93466)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -317,28 +328,29 @@
       ],
       "text/plain": [
        "        elevation                    geometry\n",
-       "0          314.54  POINT (-93.75906 41.92816)\n",
-       "1          314.55  POINT (-93.75906 41.92817)\n",
-       "2          314.69  POINT (-93.75909 41.92816)\n",
-       "3          314.70  POINT (-93.75910 41.92816)\n",
-       "4          314.97  POINT (-93.75911 41.92816)\n",
+       "0          307.78  POINT (-93.75913 41.93289)\n",
+       "1          307.79  POINT (-93.75912 41.93289)\n",
+       "2          307.69  POINT (-93.75911 41.93289)\n",
+       "3          307.64  POINT (-93.75908 41.93289)\n",
+       "4          307.66  POINT (-93.75906 41.93289)\n",
        "...           ...                         ...\n",
-       "913969     311.15  POINT (-93.76328 41.93497)\n",
-       "913970     307.90  POINT (-93.76490 41.93499)\n",
-       "913971     327.76  POINT (-93.76568 41.93491)\n",
-       "913972     315.14  POINT (-93.76131 41.92578)\n",
-       "913973     318.21  POINT (-93.76133 41.93051)\n",
+       "913969     309.80  POINT (-93.76211 41.93347)\n",
+       "913970     317.36  POINT (-93.76370 41.93348)\n",
+       "913971     308.19  POINT (-93.76052 41.93466)\n",
+       "913972     309.04  POINT (-93.76211 41.93465)\n",
+       "913973     314.48  POINT (-93.76371 41.93466)\n",
        "\n",
        "[913974 rows x 2 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "create_geo_df(pipeline, 4326)"
+    "gpd_df = create_gpd_df(pipeline, 4326)\n",
+    "gpd_df"
    ]
   },
   {
