add gpd creater in class

--- a/notebooks/excercise.ipynb
+++ b/notebooks/excercise.ipynb
@@ -20,78 +20,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6966d8c4-bb09-434e-9f60-47783475eed8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_json(json_path):\n",
-    "    try:\n",
-    "        with open(json_path) as js:\n",
-    "            json_obj = json.load(js)\n",
-    "        return json_obj\n",
-    "\n",
-    "    except FileNotFoundError:\n",
-    "        print('File not found.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "907653a0-f573-42f2-a002-9eb3e94ba46f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = read_json(\"../pipeline.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "4ee57602-fac2-46c6-973c-1bdfa2777ce6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'pipeline': [{'polygon': '',\n",
-       "   'bounds': '',\n",
-       "   'filename': '',\n",
-       "   'type': 'readers.ept',\n",
-       "   'tag': 'readdata'},\n",
-       "  {'limits': 'Classification![7:7]',\n",
-       "   'type': 'filters.range',\n",
-       "   'tag': 'nonoise'},\n",
-       "  {'in_srs': 'EPSG:3857',\n",
-       "   'out_srs': 'EPSG:4326',\n",
-       "   'tag': 'reprojectUTM',\n",
-       "   'type': 'filters.reprojection'},\n",
-       "  {'filename': '../data/iowa.csv',\n",
-       "   'tag': 'writerslas',\n",
-       "   'type': 'writers.text'}]}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "0c16ebd7-95ba-40ae-97bb-c41d0ffec4e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pipe=pdal.Pipeline(json.dumps(a))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "7a8d2270-2c57-4b23-a0eb-b4e656716c95",
    "metadata": {},
    "outputs": [],
@@ -102,19 +30,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "fd8eb06a-d010-49f0-afd8-52447ef05d56",
    "metadata": {},
    "outputs": [],
    "source": [
     "class UsgsLidar:\n",
     "    \n",
-    "    def __init__(self, path = \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/\", pipeline_json_path: str=\"pipeline.json\") -> None:\n",
+    "    def __init__(self, path = \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/\", pipeline_json_path: str=\"../pipeline.json\") -> None:\n",
     "            \n",
-    "    \n",
     "        self.path = path\n",
     "        self.input_epsg = 3857\n",
+    "        self.a = self.read_json(\"../pipeline.json\")\n",
     "    \n",
+    "    def read_json(self, json_path):\n",
+    "        try:\n",
+    "            with open(json_path) as js:\n",
+    "                json_obj = json.load(js)\n",
+    "            return json_obj\n",
+    "\n",
+    "        except FileNotFoundError:\n",
+    "            print('File not found.')\n",
     "        \n",
     "    def fetch_polygon_boundaries(self, polygon: Polygon):\n",
     "        polygon_df = gpd.GeoDataFrame([polygon], columns=['geometry'])\n",
@@ -144,18 +80,41 @@
     "        url = f\"{self.path}{region}/ept.json\"\n",
     "        boundary, poly = self.fetch_polygon_boundaries(polygon)\n",
     "        \n",
-    "        a['pipeline'][0]['filename']= f\"{self.path}{region}/ept.json\"\n",
-    "        a['pipeline'][0]['polygon'] = poly\n",
-    "        a['pipeline'][0]['bounds'] = boundary\n",
-    "        pipeline = pdal.Pipeline(json.dumps(a))\n",
+    "        self.a['pipeline'][0]['filename']= f\"{self.path}{region}/ept.json\"\n",
+    "        self.a['pipeline'][0]['polygon'] = poly\n",
+    "        self.a['pipeline'][0]['bounds'] = boundary\n",
+    "        pipeline = pdal.Pipeline(json.dumps(self.a))\n",
     "        \n",
     "        return pipeline\n",
-    "            \n"
+    "    \n",
+    "    def create_gpd_df(self, epsg):\n",
+    "        try:\n",
+    "            pipe = US.fetch_pipeline(region, polygon)\n",
+    "            pipe.execute()\n",
+    "\n",
+    "            cloud = []\n",
+    "            elevations =[]\n",
+    "            geometry=[]\n",
+    "            for row in pipe.arrays[0]:\n",
+    "                lst = row.tolist()[-3:]\n",
+    "                cloud.append(lst)\n",
+    "                elevations.append(lst[2])\n",
+    "                point = Point(lst[0], lst[1])\n",
+    "                geometry.append(point)\n",
+    "            gpd_df = gpd.GeoDataFrame(columns=[\"elevation\", \"geometry\"])\n",
+    "            gpd_df['elevation'] = elevations\n",
+    "            gpd_df['geometry'] = geometry\n",
+    "            gpd_df = gpd_df.set_geometry(\"geometry\")\n",
+    "            gpd_df.set_crs(epsg = epsg, inplace=True)\n",
+    "            return gpd_df\n",
+    "        except RuntimeError as e:\n",
+    "            print(e)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "715e21b4-e769-41c4-8908-5f33b5136733",
    "metadata": {},
    "outputs": [
@@ -169,6 +128,7 @@
    ],
    "source": [
     "US = UsgsLidar()\n",
+    "region = \"IA_FullState\"\n",
     "df = US.read_csv(\"../data/iowa.csv\")\n",
     "shape, poly = US.fetch_polygon_boundaries(polygon)\n",
     "print(poly)"
@@ -176,68 +136,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "edde170a-929d-4ff1-ba8d-e9143e0dfc82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "region = \"IA_FullState\"\n",
-    "pipeline = US.fetch_pipeline(region, polygon)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "29573de1-7bba-46b0-a8c3-92908222cc38",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "913974"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pipeline.execute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "49bca5ad-c36c-4328-92db-94fccb1804f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_gpd_df(pipe, epsg):\n",
-    "    try:\n",
-    "        cloud = []\n",
-    "        elevations =[]\n",
-    "        geometry=[]\n",
-    "        for row in pipe.arrays[0]:\n",
-    "            lst = row.tolist()[-3:]\n",
-    "            cloud.append(lst)\n",
-    "            elevations.append(lst[2])\n",
-    "            point = Point(lst[0], lst[1])\n",
-    "            geometry.append(point)\n",
-    "        gpd_df = gpd.GeoDataFrame(columns=[\"elevation\", \"geometry\"])\n",
-    "        gpd_df['elevation'] = elevations\n",
-    "        gpd_df['geometry'] = geometry\n",
-    "        gpd_df = gpd_df.set_geometry(\"geometry\")\n",
-    "        gpd_df.set_crs(epsg = epsg, inplace=True)\n",
-    "        return gpd_df\n",
-    "    except RuntimeError as e:\n",
-    "        print(e)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "181434f6-4a9d-4d0d-9ad8-4f3684693754",
    "metadata": {},
    "outputs": [
     {
@@ -268,28 +168,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>307.78</td>\n",
-       "      <td>POINT (-93.75913 41.93289)</td>\n",
+       "      <td>321.77</td>\n",
+       "      <td>POINT (-93.76613 41.93170)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>307.79</td>\n",
-       "      <td>POINT (-93.75912 41.93289)</td>\n",
+       "      <td>321.81</td>\n",
+       "      <td>POINT (-93.76608 41.93169)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>307.69</td>\n",
-       "      <td>POINT (-93.75911 41.93289)</td>\n",
+       "      <td>321.88</td>\n",
+       "      <td>POINT (-93.76609 41.93169)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>307.64</td>\n",
-       "      <td>POINT (-93.75908 41.93289)</td>\n",
+       "      <td>321.85</td>\n",
+       "      <td>POINT (-93.76610 41.93169)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>307.66</td>\n",
-       "      <td>POINT (-93.75906 41.93289)</td>\n",
+       "      <td>321.86</td>\n",
+       "      <td>POINT (-93.76612 41.93170)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -298,28 +198,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>913969</th>\n",
-       "      <td>309.80</td>\n",
-       "      <td>POINT (-93.76211 41.93347)</td>\n",
+       "      <td>307.97</td>\n",
+       "      <td>POINT (-93.76172 41.93495)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>913970</th>\n",
-       "      <td>317.36</td>\n",
-       "      <td>POINT (-93.76370 41.93348)</td>\n",
+       "      <td>309.45</td>\n",
+       "      <td>POINT (-93.76250 41.93496)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>913971</th>\n",
-       "      <td>308.19</td>\n",
-       "      <td>POINT (-93.76052 41.93466)</td>\n",
+       "      <td>311.15</td>\n",
+       "      <td>POINT (-93.76328 41.93497)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>913972</th>\n",
-       "      <td>309.04</td>\n",
-       "      <td>POINT (-93.76211 41.93465)</td>\n",
+       "      <td>307.90</td>\n",
+       "      <td>POINT (-93.76490 41.93499)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>913973</th>\n",
-       "      <td>314.48</td>\n",
-       "      <td>POINT (-93.76371 41.93466)</td>\n",
+       "      <td>327.76</td>\n",
+       "      <td>POINT (-93.76568 41.93491)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -328,35 +228,51 @@
       ],
       "text/plain": [
        "        elevation                    geometry\n",
-       "0          307.78  POINT (-93.75913 41.93289)\n",
-       "1          307.79  POINT (-93.75912 41.93289)\n",
-       "2          307.69  POINT (-93.75911 41.93289)\n",
-       "3          307.64  POINT (-93.75908 41.93289)\n",
-       "4          307.66  POINT (-93.75906 41.93289)\n",
+       "0          321.77  POINT (-93.76613 41.93170)\n",
+       "1          321.81  POINT (-93.76608 41.93169)\n",
+       "2          321.88  POINT (-93.76609 41.93169)\n",
+       "3          321.85  POINT (-93.76610 41.93169)\n",
+       "4          321.86  POINT (-93.76612 41.93170)\n",
        "...           ...                         ...\n",
-       "913969     309.80  POINT (-93.76211 41.93347)\n",
-       "913970     317.36  POINT (-93.76370 41.93348)\n",
-       "913971     308.19  POINT (-93.76052 41.93466)\n",
-       "913972     309.04  POINT (-93.76211 41.93465)\n",
-       "913973     314.48  POINT (-93.76371 41.93466)\n",
+       "913969     307.97  POINT (-93.76172 41.93495)\n",
+       "913970     309.45  POINT (-93.76250 41.93496)\n",
+       "913971     311.15  POINT (-93.76328 41.93497)\n",
+       "913972     307.90  POINT (-93.76490 41.93499)\n",
+       "913973     327.76  POINT (-93.76568 41.93491)\n",
        "\n",
        "[913974 rows x 2 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gpd_df = create_gpd_df(pipeline, 4326)\n",
+    "gpd_df = US.create_gpd_df(4326)\n",
     "gpd_df"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "29573de1-7bba-46b0-a8c3-92908222cc38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "003e23d1-2816-4a3c-b260-5f8e5a7a682f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c3d92c9-7e39-4c45-8e4e-1f1f497d4a98",
    "metadata": {},
    "outputs": [],
    "source": []
